# HeuristicAI

./: .gitignore  README.md  requirements.txt
backend/: Notebook.ipynb  _app.py  app.py  composition_dump.json  functions.py  fx.py  gui.py  gui2.py  mockai_chat.py  mockai_chat.sh  requirements.txt
backend/docs/: 01JUL25.md  Notebook.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  SnapshotsList.tsx
tools/: clean-swagger.yaml  fixed-swagger.yaml  patched-swagger-2.yaml  patched-swagger.yaml  swagger.yaml
tools/resolume-arena-api-client/: README.md  pyproject.toml
tools/resolume-arena-api-client/resolume_arena_api_client/: __init__.py
tools/resolume-arena-api-client/resolume_arena_api_client/models/: __init__.py  audio_effect.py  audio_file_info_type_0.py  audio_track_type_0.py  auto_pilot_type_0.py  boolean_parameter.py  choice_parameter.py  color_parameter.py  column.py  cross_fader.py  deck.py  effect.py  effect_presets_item.py  effects.py  event_parameter.py  frame_rate.py  integer_parameter.py  layer_transition.py  parameter_collection.py  parameter_view.py  parameter_view_control_type.py  parameter_view_display_units.py  product_info.py  range_parameter.py  reset_parameter.py  source.py  source_presets_item.py  sources.py  string_parameter.py  tempo_controller.py  text_parameter.py  transport_bpm_sync_type_0_controls.py  transport_timeline_type_0_controls.py  video_effect.py  video_effect_bypassed.py  video_file_info_type_0.py  video_track_type_0.py
tools/ts/: package-lock.json  package.json  swagger.d.ts
(+7 files in other folders)
